// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`writeTypes > snapshot: empty manifest 1`] = `
" // auto-generated by Solas

import '@jk2908/solas'

declare module '@jk2908/solas' {
export namespace Solas {
	export interface Routes {
		
	}
}
}"
`;

exports[`writeTypes > snapshot: mixed static and dynamic routes 1`] = `
" // auto-generated by Solas

import '@jk2908/solas'

declare module '@jk2908/solas' {
export namespace Solas {
	export interface Routes {
					'/': {}
					'/about': {}
					'/docs/*': {
						params: {
							slug: string
						}
					}
					'/posts/:id': {
						params: {
							id: string
						}
					}
	}
}
}"
`;

exports[`writeTypes > snapshot: route with multiple params 1`] = `
" // auto-generated by Solas

import '@jk2908/solas'

declare module '@jk2908/solas' {
export namespace Solas {
	export interface Routes {
					'/:lang/posts/:id': {
						params: {
							lang: string
							id: string
						}
					}
	}
}
}"
`;
